added postgis to postgres commented out webpack system runs and imports sample file

--- a/local.env
+++ b/local.env
@@ -1,12 +1,12 @@
 # PostgreSQL
-POSTGRES_PASSWORD=mysecretpass
-POSTGRES_USER=postgresuser
-POSTGRES_DB=postgres_db
-# DATABASE_URL=
+#POSTGRES_PASSWORD=mysecretpass
+POSTGRES_USER=dc_traffic_tickets
+#POSTGRES_DB=dc_traffic_tickets
+#DATABASE_URL=
 
 # General settings
 DJANGO_ADMIN_URL=
-DJANGO_SETTINGS_MODULE=config.settings.production
+DJANGO_SETTINGS_MODULE=config.settings.local
 DJANGO_SECRET_KEY=)cza5k8kovkr(t0_%-fc4vfv6()9+4k2%v2tg-wf(@o2a1ljfc
 DJANGO_ALLOWED_HOSTS=.dctraffictickets.info
 
