--- a/dev.yml
+++ b/dev.yml
@@ -10,8 +10,7 @@ services:
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
       - postgres_backup_dev:/backups
-    environment:
-      - POSTGRES_USER=dc_traffic_tickets
+    env_file: local.env
 
   django:
     build:
@@ -20,17 +19,10 @@ services:
     command: python /app/manage.py runserver_plus 0.0.0.0:8000
     depends_on:
       - postgres
-    environment:
-      - POSTGRES_USER=dc_traffic_tickets
-      - USE_DOCKER=yes
+    env_file: local.env
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     links:
       - postgres
-
-
-
-
-
