--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,28 @@
-sudo: true
+sudo: required
 
-services:
-  - docker
-  
-before_install:
-- docker-compose -f dev.yml build
-- docker-compose -f dev.yml up -d 
-- docker ps -a
-- docker-compose -f dev.yml run django python manage.py test
+language: go
+
+services:  
+    - docker
+
+env:  
+    global:
+        - DOCKER_VERSION=1.12.0-rc4
+        - DOCKER_COMPOSE_VERSION=1.12.0
+
+before_install:  
+    # list docker-engine versions
+    - apt-cache madison docker-engine
+
+    # upgrade docker-engine to specific version
+    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
+
+    # reinstall docker-compose at specific version
+    - sudo rm /usr/local/bin/docker-compose
+    - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+    - chmod +x docker-compose
+    - sudo mv docker-compose /usr/local/bin
+
+script:  
+    - docker version
+    - docker-compose version
