--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:  
     global:
-        - DOCKER_VERSION=1.12.0-rc4
+        - DOCKER_VERSION=1.12.0-0~trusty
         - DOCKER_COMPOSE_VERSION=1.8.0
 
 before_install:  
