--- a/local.env
+++ b/local.env
@@ -8,7 +8,7 @@ POSTGRES_USER=dc_traffic_tickets
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.local
 DJANGO_SECRET_KEY=)cza5k8kovkr(t0_%-fc4vfv6()9+4k2%v2tg-wf(@o2a1ljfc
-DJANGO_ALLOWED_HOSTS=.dctraffictickets.info
+DJANGO_ALLOWED_HOSTS=.dctraffictickets.net
 
 # AWS Settings
 DJANGO_AWS_ACCESS_KEY_ID=
