--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ POSTGRES_DB=postgres_db
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
 DJANGO_SECRET_KEY=)cza5k8kovkr(t0_%-fc4vfv6()9+4k2%v2tg-wf(@o2a1ljfc
-DJANGO_ALLOWED_HOSTS=.dctraffictickets.info
+DJANGO_ALLOWED_HOSTS=.dctraffictickets.net
 
 # AWS Settings
 DJANGO_AWS_ACCESS_KEY_ID=
