--- a/compose/nginx-secure/nginx-secure.conf
+++ b/compose/nginx-secure/nginx-secure.conf
@@ -25,33 +25,61 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    proxy_headers_hash_bucket_size  52;
+
+    gzip  on;
 
     upstream app {
         server django:5000;
     }
-
 	server {
 		listen 80;
-		charset     utf-8;
-
-        
-		server_name ___my.example.com___ ;
+		server_name ___my.example.com___ www.___my.example.com___;
 
 		location /.well-known/acme-challenge {
-			proxy_pass http://___LETSENCRYPT_IP___:___LETSENCRYPT_PORT___;
+			# Since the certbot container isn't up constantly, need to resolve ip dynamically using docker's dns
+			resolver ___NAMESERVER___;
+			set $certbot_addr_port certbot:80;
+			proxy_pass http://$certbot_addr_port;
+			proxy_set_header Host            $host;
+			proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+		}
+
+		location / {
+			return         301 https://$server_name$request_uri;
+		}
+
+	}
+
+	server {
+		listen 443;
+		server_name ___my.example.com___ www.___my.example.com___;
+
+		ssl on;
+		ssl_certificate /etc/letsencrypt/live/___my.example.com___/fullchain.pem;
+		ssl_certificate_key /etc/letsencrypt/live/___my.example.com___/privkey.pem;
+		ssl_session_timeout 5m;
+		ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+		ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+		ssl_prefer_server_ciphers on;
+
+		ssl_session_cache shared:SSL:10m;
+		ssl_dhparam /etc/ssl/private/dhparams.pem;
+
+		location /.well-known/acme-challenge {
+			resolver ___NAMESERVER___;
+			set $certbot_addr_port certbot:443;
+			proxy_pass http://$certbot_addr_port;
 			proxy_set_header Host            $host;
 			proxy_set_header X-Forwarded-For $remote_addr;
 			proxy_set_header X-Forwarded-Proto https;
 		}
 
-        
-
 		location / {
             # checks for static file, if not found proxy to app
             try_files $uri @proxy_to_app;
         }
-
 
 		# cookiecutter-django app
 		location @proxy_to_app {
@@ -62,9 +90,7 @@ http {
             proxy_pass   http://app;
 
         }
+
 	}
+
 }
-
-
-
-
