--- a/compose/django/Dockerfile-dev
+++ b/compose/django/Dockerfile-dev
@@ -4,8 +4,7 @@ ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update \
     && apt-get upgrade -y \
-    && apt-get install -y \
-    && apt-get install binutils libproj-dev gdal-bin -y
+    && apt-get install -y libproj-dev gdal-bin python-gdal libgeoip1
 
 # Requirements have to be pulled and installed here, otherwise caching won't work
 COPY ./requirements /requirements
