--- a/compose/nginx-secure/nginx-secure.conf
+++ b/compose/nginx-secure/nginx-secure.conf
@@ -25,6 +25,12 @@ http {
 
     keepalive_timeout  65;
 
+    fastcgi_buffers 8 16k;
+    fastcgi_buffer_size 32k;
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+
     proxy_headers_hash_bucket_size  52;
 
     gzip  on;
