add in wag tail with bootstrap

--- a/compose/django/Dockerfile
+++ b/compose/django/Dockerfile
@@ -6,9 +6,15 @@ RUN apt-get update \
     && apt-get upgrade -y \
     && apt-get install -y libproj-dev gdal-bin python-gdal libgeoip1
 
+RUN apt-get install supervisor -y
+ADD ./compose/django/supervisord.conf /etc/supervisor.d/dc_traffic_tickets.conf
+CMD ["supervisord", "-c", "/etc/supervisord.conf"]
+
+
 # Requirements have to be pulled and installed here, otherwise caching won't work
 COPY ./requirements /requirements
 
+RUN pip install --upgrade pip
 RUN pip install -r /requirements/production.txt \
     && groupadd -r django \
     && useradd -r -g django django
