--- a/local.env
+++ b/local.env
@@ -25,5 +25,10 @@ DJANGO_SECURE_SSL_REDIRECT=False
 # django-allauth
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
+SENTRY_DSN=https://7b22bb9396a849e9b5c1a54c7e0b547d:ac561a70bf1940a1b3ff8487317fcd7f@sentry.io/82285
 
 USE_DOCKER=yes
+
+# Staging Key
+WAGTAILEMBEDS_EMBEDLY_KEY=f14b42a4dc624d68bcfa75408ace882f
+WAGTAIL_ADMIN_URL=wagtail_admin
