removed sql explorer

--- a/local.env
+++ b/local.env
@@ -11,9 +11,9 @@ DJANGO_SECRET_KEY=)cza5k8kovkr(t0_%-fc4vfv6()9+4k2%v2tg-wf(@o2a1ljfc
 DJANGO_ALLOWED_HOSTS=.dctraffictickets.net
 
 # AWS Settings
-DJANGO_AWS_ACCESS_KEY_ID=
-DJANGO_AWS_SECRET_ACCESS_KEY=
-DJANGO_AWS_STORAGE_BUCKET_NAME=
+DJANGO_AWS_ACCESS_KEY_ID=AKIAI4GXPB2H2A2YVFFQ
+DJANGO_AWS_SECRET_ACCESS_KEY=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
+DJANGO_AWS_STORAGE_BUCKET_NAME=dctrafficbucket
 
 # Used with email
 DJANGO_MAILGUN_API_KEY=
@@ -25,7 +25,7 @@ DJANGO_SECURE_SSL_REDIRECT=False
 # django-allauth
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
-SENTRY_DSN=https://7b22bb9396a849e9b5c1a54c7e0b547d:ac561a70bf1940a1b3ff8487317fcd7f@sentry.io/82285
+#SENTRY_DSN=https://7b22bb9396a849e9b5c1a54c7e0b547d:ac561a70bf1940a1b3ff8487317fcd7f@sentry.io/82285
 
 USE_DOCKER=yes
 
