--- a/local.env
+++ b/local.env
@@ -25,8 +25,7 @@ DJANGO_SECURE_SSL_REDIRECT=False
 # django-allauth
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
 
-#SENTRY_DSN=https://7b22bb9396a849e9b5c1a54c7e0b547d:ac561a70bf1940a1b3ff8487317fcd7f@sentry.io/82285
-
+#SENTRY_DSN=
 USE_DOCKER=yes
 
 # Staging Key
