--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,12 @@
-sudo: required
-
-language: go
-
-services:  
-    - docker
-
-env:  
-    global:
-        - DOCKER_VERSION=1.12.0-0~trusty
-        - DOCKER_COMPOSE_VERSION=1.8.0
-
-before_install:  
-    # list docker-engine versions
-    - apt-cache madison docker-engine
-
-    # upgrade docker-engine to specific version
-    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
-
-    # reinstall docker-compose at specific version
-    - sudo rm /usr/local/bin/docker-compose
-    - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-    - chmod +x docker-compose
-    - sudo mv docker-compose /usr/local/bin
-
-script:  
-    - docker version
-    - docker-compose version
+ sudo: true
+ before_install:
+   - sudo apt-get update -qq
+   - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
+   - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
+   - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
+   - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
+   - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
+   - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
+ language: python
+ python:
+ - "3.5"
