--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
- sudo: true
- before_install:
-   - sudo apt-get update -qq
-   - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
-   - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
-   - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
-   - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
-   - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
-   - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
- language: python
- python:
+sudo: true
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
+ - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
+ - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
+ - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
+ - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
+ - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
+language: python
+python:
  - "3.5"
+env:
+ - POSTGRES_USER=dc_traffic_tickets
+ - DJANGO_ADMIN_URL=testadmin
+ - DJANGO_SETTINGS_MODULE=config.settings.test
+ - DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
+ - WAGTAIL_ADMIN_URL=wagtail_admin
+
+install: "pip install -r requirements/test.txt"
+script: 'python manage.py test'
