--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 sudo: true
+services:
+  - postgresql
+addons:
+  postgresql: "9.5"
+
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
@@ -18,4 +23,8 @@ env:
  - WAGTAIL_ADMIN_URL=wagtail_admin
 
 install: "pip install -r requirements/test.txt"
+
+before_script:
+  - psql -U postgres -c "create extension postgis"  
+  - psql -c 'create database travis_ci_test;' -U postgres
 script: 'python manage.py test'
