--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ env:
 install: "pip install -r requirements/test.txt"
 
 before_script:
-  - psql -U postgres -c "create extension postgis"  
+  - psql -U postgres -c "create extension postgis"
   - psql -c 'create database travis_ci_test;' -U postgres
-script: 'python manage.py test'
+script: 'python manage.py test --settings=config.settings.test'
