--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
  - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
  - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
  - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
- - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
+ - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1 postgresql-9.5-postgis-2.3
 language: python
 python:
  - "3.5"
@@ -21,6 +21,5 @@ env:
 install: "pip install -r requirements/test.txt"
 
 before_script:
-  - psql -U postgres -c "create extension postgis"
   - psql -c 'create database travis_ci_test;' -U postgres
 script: 'python manage.py test --settings=config.settings.test'
