--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install: "pip install -r requirements/test.txt"
 before_script:
 before_script:
   - psql -c 'create database travis_postgis;' -U postgres
-  - psql -c 'CREATE EXTENSION postgis;' -U postgres -d travis_postgis
-  - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d travis_postgis
+  # - psql -c 'CREATE EXTENSION postgis;' -U postgres -d travis_postgis
+  # - psql -c 'CREATE EXTENSION postgis_topology;' -U postgres -d travis_postgis
 
 script: 'python manage.py test --settings=config.settings.test'
