--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ sudo: true
 before_install:
  - sudo apt-get update -qq
  - sudo -E apt-get -yq update &>> ~/apt-get-update.log
- - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install postgresql-9.5-postgis-2.3
+ - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install postgresql-9.5-postgis-2.3 postgresql-9.5-postgis-2.3-scripts
  - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
  - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
  - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
