--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,6 @@ install: "pip install -r requirements/test.txt"
 before_script:
   before_script:
   - psql -c 'create database travis_postgis;' -U postgres
+  - psql -U postgres -c "create extension postgis;" -d travis_postgis
 
 script: 'python manage.py test --settings=config.settings.test'
