--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ services:
 
 addons:
   postgresql: "9.5"
+   apt:
+     packages:
+      - gdal-bin
+      - postgresql-9.5-postgis-2.3
 
 language: python
 python:
@@ -11,7 +15,6 @@ python:
 sudo: required
 before_install:
  - sudo apt-get update -qq
- - sudo -E apt-get -yq update &>> ~/apt-get-update.log
  - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
  - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
  - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
