--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ services:
 
 addons:
  postgresql: "9.5"
- apt:
-   packages:
-    - gdal-bin
-    - postgresql-9.5-postgis-2.3
 
 language: python
 python:
@@ -15,6 +11,7 @@ python:
 
 sudo: required
 before_install:
+ - wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
  - sudo apt-get update -qq
  - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
  - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
@@ -22,9 +19,9 @@ before_install:
  - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
  - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
  - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
+ - sudo apt-get install postgresql-9.5-postgis-2.2 pgadmin3 postgresql-contrib-9.5
 
 install:
- - sudo apt-get install -y postgresql-9.5-postgis-2.3
  - echo "host all all 0.0.0.0/0 md5" | sudo tee -a /etc/postgresql/9.5/main/pg_hba.conf
  - echo "listen_addresses = '*'" | sudo tee -a /etc/postgresql/9.5/main/postgresql.conf
  - sudo service postgresql restart 9.5
