--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
  - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
  - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
  - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
- - sudo apt-get install -qq postgresql-9.5-postgis-2.2 pgadmin3 postgresql-contrib-9.5
+ - sudo apt-get install -qq -f postgresql-9.5-postgis-2.2 pgadmin3 postgresql-contrib-9.5
 
 install:
  - echo "host all all 0.0.0.0/0 md5" | sudo tee -a /etc/postgresql/9.5/main/pg_hba.conf
