--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: required
 before_install:
  - wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
  - sudo apt-get update -qq
- - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
+ - sudo apt-get install -qq build-essential build-dep gettext python-dev zlib1g-dev libpq-dev xvfb
  - sudo apt-get install -qq libtiff4-dev libjpeg8-dev libfreetype6-dev liblcms1-dev libwebp-dev
  - sudo apt-get install -qq graphviz-dev python-setuptools python3-dev python-virtualenv python-pip
  - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
