--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 
 sudo: required
 before_install:
+ - sudo apt-get install -qq wget
  - wget --quiet -O - http://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc | sudo apt-key add -
  - sudo apt-get update -qq
  - sudo apt-get install -qq build-essential gettext python-dev zlib1g-dev libpq-dev xvfb
@@ -18,7 +19,7 @@ before_install:
  - sudo apt-get install -qq firefox automake libtool libreadline6 libreadline6-dev libreadline-dev
  - sudo apt-get install -qq libsqlite3-dev libxml2 libxml2-dev libssl-dev libbz2-dev wget curl llvm
  - sudo apt-get install -qq libproj-dev gdal-bin python-gdal libgeoip1
- - sudo apt-get install -qq postgresql-9.5-postgis-2.3 postgresql-contrib-9.5 postgis-2.2
+ - sudo apt-get install -qq postgresql-9.5-postgis-2.2 postgresql-contrib-9.5 postgis-2.2
 
 install:
  - echo "host all all 0.0.0.0/0 md5" | sudo tee -a /etc/postgresql/9.5/main/pg_hba.conf
